Updates chapter2/section3.md
Auto commit by GitBook Editor